plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.jankinwu'
version = '0.0.1-SNAPSHOT'
description = 'fntv-desktop-backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.bytedeco:javacv:1.5.12'
    implementation 'org.bytedeco:ffmpeg-platform:7.1.1-1.5.12'
    implementation 'com.github.kokorin.jaffree:jaffree:2024.08.29'
    implementation 'com.h2database:h2:2.2.220'
    implementation 'com.baomidou:mybatis-plus-spring-boot3-starter:3.5.5'
    implementation 'com.alibaba.fastjson2:fastjson2:2.0.40'
    implementation 'org.apache.commons:commons-lang3'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
}

tasks.named('test', Test) {
    useJUnitPlatform()
}

//test {
//    jvmArgs '-Xmx1024m', '-XX:MaxPermSize=256m'
//}
